using System.Drawing;

namespace WolfIsland.Environment
{
    public abstract class Biome
    {
        public abstract Color Color { get; set; }
    }
}